[DOCS-3228] Use same response schema for single-item product endpoints
